# Autonomous-SWE-Agent

./: .env.example  .gitignore  pyproject.toml
config/: settings.py
db/: database.py  models.py
plans/: deep_dive_agents.md  deep_dive_infrastructure.md  deep_dive_rag_engine.md  implementation_plan.md  implementation_plan_p2.md
scripts/: setup_dummy_repo.py
src/agents/: code_writer.py  planner.py  pr_agent.py  reviewer.py
src/github_client/: issue_reader.py  pr_creator.py  repo_manager.py
src/graph/: edges.py  nodes.py  state.py  workflow.py
src/llm/: cost_tracker.py  router.py
src/rag/: chunker.py  embedder.py  indexer.py  repo_map.py  retriever.py
src/sandbox/: patch_applier.py  test_runner.py
src/utils/: file_utils.py  language_detect.py  logger.py
ui/: app.py
