[project]
name = "autonomous-swe-agent"
version = "0.1.0"
description = "Autonomous software engineering agent that solves GitHub issues"
requires-python = ">=3.11"

dependencies = [
    # Orchestration
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-core>=0.3",

    # LLM Router
    "litellm>=1.40",
    "openai>=1.30",
    "google-generativeai>=0.8",

    # Code Parsing
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.24",
    "tree-sitter-javascript>=0.24",
    
    # Vector Store + Embeddings
    "qdrant-client>=1.13",
    "langchain-qdrant>=0.2",

    # GitHub
    "PyGithub>=2.6",
    "gitpython>=3.1",

    # Persistence
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20",

    # UI
    "streamlit>=1.45",

    # Utilities
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "unidiff>=0.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.10",
]
